--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web",
-    "prepare": "expo-module prepare"
+    "web": "expo start --web"
   },
   "repository": {
     "type": "git",
@@ -25,25 +24,11 @@
   "author": "Alejandro Jaime Jimenez",
   "license": "MIT",
   "dependencies": {
-    "@expo/webpack-config": "^19.0.1",
-    "epubjs": "^0.3.93",
-    "expo": "~53.0.12",
-    "expo-file-system": "^18.1.10",
-    "expo-status-bar": "~2.2.3",
-    "react": "19.0.0",
-    "react-native": "0.79.4",
-    "react-native-fs": "^2.20.0",
-    "react-native-webview": "^13.15.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@types/react": "~19.0.10",
-    "typescript": "~5.8.3"
+    "epubjs": "^0.3.93"
   },
   "peerDependencies": {
     "react": "*",
     "react-native": "*",
-    "expo-file-system": "*",
     "react-native-webview": "*",
     "epubjs": "*"
   },
