added support to typescript apps

--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "epub-library-reader",
   "version": "1.0.0",
-  "description": "Un componente para la lectura de archivos EPUB en aplicaciones React Native con TypeScript y Expo",
-  "main": "index.ts",
-  "types": "index.ts",
+  "description": "Un componente para la lectura de archivos EPUB en aplicaciones React Native con TypeScript",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
