fix: Resolver problemas de compatibilidad para uso en proyectos externos
Este commit soluciona los errores de "Module parse failed: Unexpected token" y "Cannot find file" al importar la biblioteca desde proyectos externos.

Cambios principales:
- Actualizada la configuración de TypeScript con jsx: 'react' y target: 'es5'
- Mejorada configuración de Babel para transformar JSX correctamente
- Implementado script post-build para organizar archivos compilados
- Corregidas rutas en archivos de salida para apuntar a ubicaciones correctas
- Agregada validación automática para asegurar calidad de archivos dist
- Eliminada dependencia de Expo para mayor compatibilidad

Estos cambios aseguran que la biblioteca sea compatible con proyectos React Native web y nativos, permitiendo una fácil integración mediante npm/yarn sin errores de compilación.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "rimraf dist && tsc && babel src --out-dir dist --extensions \".ts,.tsx\" --copy-files",
+    "build": "rimraf dist && tsc && babel src --out-dir dist/src --extensions \".ts,.tsx\" --copy-files && node scripts/post-build.js",
     "validate": "node validate-dist.js",
     "prepare": "npm run build && npm run validate"
   },
